Archive2/12/8c315b607cb94e/output
main.cpp:32:18: error: explicit specialization in non-namespace scope 'class B'
         template<>
                  ^
main.cpp:35:18: error: explicit specialization in non-namespace scope 'class B'
         template<>
                  ^
